# scry

./: .ML_COMPETITIVENESS_REPORT_2026-02-21.md.kate-swp  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  EXAMPLES.md  LICENSE-APACHE  ML_COMPETITIVENESS_REPORT_2026-02-21.md  PAPER.md  README.md  ROADMAP.md  SAFETY.md  SCRY_PIPE_PROPOSAL.md  SCRY_WHITEPAPER.aux  SCRY_WHITEPAPER.out  SCRY_WHITEPAPER.tex  SECURITY.md  STATUS.md  bench_dashboard.html  deny.toml  fair_bench_results.txt  install.sh  logreg_bench_output.txt  logreg_rerun.txt  masonic_mirror_bench_1771410802.txt  masonic_mirror_bench_1771411974.txt  masonic_mirror_bench_1771412571.txt  masonic_mirror_bench_1771414038.txt  masonic_mirror_bench_1771414771.txt  masonic_mirror_bench_1771415022.txt  masonic_mirror_bench_1771418849.txt  masonic_mirror_bench_1771467623.txt  masonic_mirror_bench_1771469628.txt  masonic_mirror_bench_1771470015.txt  ml_ecosystem_comparison.aux  ml_ecosystem_comparison.tex  run_examples.sh  scry_chart_audit.aux  (+5 more)
crates/pixelchart-cli/: Cargo.toml  README.md
crates/pixelchart-cli/src/: csv.rs  examples.rs  inline.rs  main.rs  spec.rs
crates/scry-chart/: Cargo.toml  README.md
crates/scry-chart/benches/: chart3d_bench.rs
crates/scry-chart/docs/: cookbook.md
crates/scry-chart/examples/: advanced_charts.rs  axis_stress_test.rs  chart_gallery.rs  chart_showcase.rs  chart_theme_gallery.rs  dashboard.rs  demo.rs  feature_showcase.rs  font_scaling_demo.rs  formatting_showcase.rs  fresh_charts.rs  gantt_demo.rs  interactive.rs  legend_demo.rs  powertest_v2.rs  refined_features.rs  render_all.rs  render_png.rs  scatter_demo.rs  showcase.rs  subplot_demo.rs  tier2_charts.rs  verify_charts.rs  visual_audit.rs  visual_demo.rs
crates/scry-chart/src/: annotation.rs  axis.rs  chart_trait.rs  colormap.rs  cursor.rs  data.rs  decimate.rs  error.rs  export.rs  formatter.rs  inline.rs  json_spec.rs  legend.rs  lib.rs  locator.rs  margin.rs  pdf_export.rs  scale.rs  spec.rs  streaming.rs  subplot.rs  svg_export.rs  text_utils.rs  theme.rs  time_scale.rs  widget.rs  zoom.rs
crates/scry-chart/tests/: academic_compliance.rs  acid_test.rs  axis_diagnostic.rs  axis_stress_test.rs  edge_case_rendering.rs  edge_cases.rs  formatting_invariants.rs  golden_tests.rs  quality_audit.rs  render_tests.rs  robustness_test.rs  serde_roundtrip.rs  stress_test.rs  visual_audit.rs  visual_audit_tui.rs  visual_benchmark.rs
crates/scry-cli/: Cargo.toml  README.md
crates/scry-cli/samples/: grades.csv  revenue.csv  sensors.csv  stocks.csv
crates/scry-cli/src/: chart.rs  csv.rs  display.rs  examples.rs  fetch.rs  fetch_default.toml  inline.rs  main.rs  play.rs  render_image.rs  see.rs  spec.rs  splash.rs  stream.rs  sysinfo_fetch.rs  viz.rs
crates/scry-font/: Cargo.toml
crates/scry-font/src/: glyphs.rs  lib.rs  main.rs  params.rs  primitives.rs  tables.rs
crates/scry-gpu/: Cargo.toml
crates/scry-gpu/src/: buffer.rs  device.rs  dispatch.rs  error.rs  lib.rs  shader.rs
crates/scry-learn/: Cargo.toml  README.md  proofs.tex
crates/scry-learn/benches/: Dockerfile  README.md  benchmark_config.rs  benchmark_results.tex  competitor_bench.rs  fair_bench.rs  fair_bench_runner.sh  full_model_benchmark.rs  honest_bench.rs  industry_benchmark.rs  ml_algorithms.rs  predict_latency.rs  scaling_benchmark.rs  sklearn_comparison.py  sklearn_results.json
crates/scry-learn/examples/: bench_dashboard.rs  benchmark_comparison.rs  benchmark_report.rs  industry_report.rs  live_training.rs  memory_benchmark.rs  memory_crosslib.rs  ml_viz_showcase.rs  parity_diagnostic.rs
crates/scry-learn/paper/: fair_benchmark_paper.tex
crates/scry-learn/scripts/: sklearn_comparison.py
crates/scry-learn/src/: calibration.rs  constants.rs  dataset.rs  distance.rs  error.rs  feature_selection.rs  lib.rs  matrix.rs  mmap.rs  onnx.rs  partial_fit.rs  pipeline.rs  polars_interop.rs  rng.rs  search.rs  sparse.rs  split.rs  version.rs  viz.rs  weights.rs
crates/scry-learn/tests/: benchmark_audit.rs  convergence.rs  correctness.rs  cv_benchmark.rs  edge_cases.rs  golden_reference.rs  golden_regression_test.rs  integration_pipeline.rs  mathematical_invariants.rs  memory_crosslib.rs  nan_rejection.rs  numerical_stability.rs  optimization_equivalence.rs  parity_diagnostic.rs  partial_fit_streaming.rs  production_bench.rs  quick_vitals.rs  regression_audit.rs  schema_version.rs  serialization.rs  sklearn_bench.py  sparse_dataset.rs  statistical_robustness.rs  stress_edge_cases.rs  tracking_alloc.rs
crates/scry-llm/: Cargo.toml  bench_memory_results.json  bench_results_2026-02-21.md  build.rs  llama_optimizations_paper.tex
crates/scry-llm/benches/: llm_ops.rs
crates/scry-llm/examples/: mfu_bench.rs  prepare_data.rs  profile_step.rs  pytorch_compare.py  train_gpt2.rs
crates/scry-llm/fuzz/: Cargo.toml
crates/scry-llm/src/: checkpoint.rs  data.rs  error.rs  generate.rs  lib.rs  ops.rs  (+4 more)
crates/scry-mcp/: Cargo.toml
crates/scry-mermaid/: Cargo.toml
crates/scry-pipe/: Cargo.toml  README.md
crates/scry-stt/: Cargo.toml  trace_decoder.py  trace_encoder.py
crates/scry-terminal/: Cargo.toml  terminal.toml.example
crates/scry-top/: Cargo.toml
crates/scry-viz/: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_agglomerative.rs  fuzz_cart_predict.rs  fuzz_chart_builder.rs  fuzz_chart_render.rs  fuzz_feature_selection.rs  fuzz_gradient_boosting.rs  fuzz_hist_gbt.rs  fuzz_iforest.rs  fuzz_ipc_deserialize.rs  fuzz_ir_roundtrip.rs  fuzz_kitty_escape.rs  fuzz_kmeans_fit.rs  fuzz_knn.rs  fuzz_linear_fit.rs  fuzz_llm_batched_forward.rs  fuzz_llm_data_loader.rs  fuzz_llm_forward.rs  fuzz_llm_training_step.rs  fuzz_metrics.rs  fuzz_mmap_parse.rs  fuzz_naive_bayes.rs  fuzz_neural_forward.rs  fuzz_neural_regressor.rs  fuzz_pca_transform.rs  fuzz_pipeline.rs  fuzz_pipeline_transform.rs  fuzz_preprocess_extra.rs  fuzz_random_forest.rs  fuzz_rasterize.rs  fuzz_scale.rs  fuzz_scaler_chain.rs  fuzz_scene_hash.rs  fuzz_sparse_ops.rs  fuzz_svm_fit.rs  fuzz_text_vectorizer.rs  fuzz_tree_shap.rs  fuzz_vte_terminal.rs
(+748 files in other folders)
