[workspace]
members = [".", "crates/pixelchart"]
resolver = "2"

[package]
name = "ratatui-pixelcanvas"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
authors = ["esoc"]
description = "Pixel-perfect vector graphics for Ratatui via Kitty, Sixel, and Unicode fallbacks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Slush97/ratatui-pixelcanvas"
keywords = ["ratatui", "tui", "kitty", "graphics", "vector"]
categories = ["command-line-interface", "graphics", "rendering"]
readme = "README.md"

[features]
default = ["kitty", "widget"]
kitty = []
sixel = []
iterm2 = []
widget = ["dep:ratatui"]
text = ["dep:fontdue"]
shm = ["dep:libc"]

[dependencies]
tiny-skia = "0.11"
arrayvec = "0.7"
thiserror = "2"
base64 = "0.22"
flate2 = "1"

# Optional: Ratatui integration
ratatui = { version = "0.29", optional = true }
# Optional: Text rendering
fontdue = { version = "0.9", optional = true }
# Optional: POSIX shared memory for zero-copy Kitty transmission
libc = { version = "0.2", optional = true }

[dev-dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
insta = { version = "1", features = ["glob"] }
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "rasterize"
harness = false

[[bench]]
name = "efficiency"
harness = false

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Pedantic overrides — allow these common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
