[workspace]
members = [".", "crates/scry-chart", "crates/scry-cli", "crates/scry-learn", "crates/scry-pipe"]
exclude = ["fuzz"]
resolver = "2"

[package]
name = "scry-engine"
version = "0.7.0"
edition = "2021"
rust-version = "1.83.0"
authors = ["esoc"]
description = "Pixel-perfect vector graphics for terminals via Kitty, Sixel, and Unicode fallbacks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Slush97/scry"
documentation = "https://docs.rs/scry-engine"
keywords = ["ratatui", "tui", "kitty", "graphics", "vector"]
categories = ["command-line-interface", "graphics", "rendering"]
readme = "README.md"
exclude = ["examples/", "benches/", "tests/", ".github/"]

[features]
default = ["kitty", "widget", "gpu"]
kitty = []
sixel = []
iterm2 = []
widget = ["dep:ratatui"]
text = ["dep:fontdue"]
shm = ["dep:libc"]
svg = ["dep:resvg"]
serde = ["dep:serde"]
wasm = ["dep:wasm-bindgen", "dep:web-sys", "dep:js-sys"]
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

[dependencies]
tiny-skia = "0.11"
arrayvec = "0.7"
thiserror = "2"
base64 = "0.22"
flate2 = "1"
serde = { version = "1", features = ["derive"], optional = true }

# Optional: Ratatui integration
ratatui = { version = "0.29", optional = true }
# Optional: Text rendering
fontdue = { version = "0.9", optional = true }
# Optional: POSIX shared memory for zero-copy Kitty transmission
libc = { version = "0.2", optional = true }
# Optional: SVG rendering via resvg (uses tiny-skia internally)
resvg = { version = "0.44", optional = true, default-features = false }
# Optional: GPU-accelerated rasterization via wgpu
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
# Optional: WASM bridge for rendering to HTML5 Canvas
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", optional = true, features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
    "Document",
    "Window",
] }

[dev-dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
fastrand = "2"
insta = { version = "1", features = ["glob"] }
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
scry-chart = { path = "crates/scry-chart", features = ["widget"] }

[[example]]
name = "line_drawing"
required-features = ["svg", "widget"]

[[example]]
name = "dual_y_demo"

[[example]]
name = "session3_showcase"

[[bench]]
name = "rasterize"
harness = false

[[bench]]
name = "efficiency"
harness = false

[[bench]]
name = "chart"
harness = false

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Pedantic overrides — allow these common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Cast lints — pixel graphics math inherently converts between f32, u32, usize, i32.
# Allowing crate-wide is cleaner than 38+ scattered #[allow] annotations.
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"

# Math style — `a + b * c` is more readable than `b.mul_add(c, a)` for 2D coordinate math.
suboptimal_flops = "allow"
missing_const_for_fn = "allow"

# Style lints — intentional patterns in this crate
similar_names = "allow"           # pixel math vars: tile_w_cells / tile_h_cells, etc.
option_if_let_else = "allow"      # if-let chains are clearer than map_or_else for this code
should_implement_trait = "allow"   # custom from_str with custom error types
many_single_char_names = "allow"   # math-heavy code: x, y, w, h, t, r, g, b
too_many_lines = "allow"           # complex rendering functions
needless_pass_by_value = "allow"   # widget API ergonomics
while_float = "allow"             # animation loops with float progress
unreadable_literal = "allow"       # magic numbers in procedural generation (0.171573, etc.)
float_cmp = "allow"                # exact f32 comparisons in tests with known literals
field_reassign_with_default = "allow" # builder-like config structs
items_after_statements = "allow"   # inline closures/constants in example code
branches_sharing_code = "allow"    # false positives on if/else with shared setup
match_same_arms = "allow"          # readability: explicit arms over catch-all
double_parens = "allow"            # macro-generated code
needless_range_loop = "allow"      # sometimes index-based loops are clearer
