[package]
name = "scry-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tiny-skia = "0.11"
fastrand = "2"

[dependencies.scry-engine]
path = ".."
features = ["kitty"]

[dependencies.scry-chart]
path = "../crates/scry-chart"

[dependencies.scry-learn]
path = "../crates/scry-learn"

# ═══════════════════════════════════════════
# Phase 1: Core crate fuzz targets
# ═══════════════════════════════════════════

[[bin]]
name = "fuzz_kitty_escape"
path = "fuzz_targets/fuzz_kitty_escape.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_scene_hash"
path = "fuzz_targets/fuzz_scene_hash.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rasterize"
path = "fuzz_targets/fuzz_rasterize.rs"
test = false
doc = false
bench = false

# ═══════════════════════════════════════════
# Phase 2: Pixelchart fuzz targets
# ═══════════════════════════════════════════

[[bin]]
name = "fuzz_scale"
path = "fuzz_targets/fuzz_scale.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_chart_render"
path = "fuzz_targets/fuzz_chart_render.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_chart_builder"
path = "fuzz_targets/fuzz_chart_builder.rs"
test = false
doc = false
bench = false

# ═══════════════════════════════════════════
# Phase 3: scry-learn fuzz targets
# ═══════════════════════════════════════════

[[bin]]
name = "fuzz_cart_predict"
path = "fuzz_targets/fuzz_cart_predict.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_scaler_chain"
path = "fuzz_targets/fuzz_scaler_chain.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_neural_forward"
path = "fuzz_targets/fuzz_neural_forward.rs"
test = false
doc = false
bench = false
