[package]
name = "scry-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tiny-skia = "0.11"
fastrand = "2"

[dependencies.scry-engine]
path = ".."
features = ["kitty"]

[dependencies.scry-terminal]
path = "../crates/scry-terminal"

[dependencies.scry-chart]
path = "../crates/scry-chart"

[dependencies.scry-learn]
path = "../crates/scry-learn"
features = ["mmap"]

[dependencies.scry-pipe]
path = "../crates/scry-pipe"

# ═══════════════════════════════════════════
# Phase 1: Core crate fuzz targets
# ═══════════════════════════════════════════

[[bin]]
name = "fuzz_kitty_escape"
path = "fuzz_targets/fuzz_kitty_escape.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_scene_hash"
path = "fuzz_targets/fuzz_scene_hash.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rasterize"
path = "fuzz_targets/fuzz_rasterize.rs"
test = false
doc = false
bench = false

# ═══════════════════════════════════════════
# Phase 2: Pixelchart fuzz targets
# ═══════════════════════════════════════════

[[bin]]
name = "fuzz_scale"
path = "fuzz_targets/fuzz_scale.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_chart_render"
path = "fuzz_targets/fuzz_chart_render.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_chart_builder"
path = "fuzz_targets/fuzz_chart_builder.rs"
test = false
doc = false
bench = false

# ═══════════════════════════════════════════
# Phase 3: scry-learn fuzz targets
# ═══════════════════════════════════════════

[[bin]]
name = "fuzz_cart_predict"
path = "fuzz_targets/fuzz_cart_predict.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_scaler_chain"
path = "fuzz_targets/fuzz_scaler_chain.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_neural_forward"
path = "fuzz_targets/fuzz_neural_forward.rs"
test = false
doc = false
bench = false

# ═══════════════════════════════════════════
# Phase 4: scry-pipe fuzz targets
# ═══════════════════════════════════════════

[[bin]]
name = "fuzz_ir_roundtrip"
path = "fuzz_targets/fuzz_ir_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pipeline_transform"
path = "fuzz_targets/fuzz_pipeline_transform.rs"
test = false
doc = false
bench = false

# ═══════════════════════════════════════════
# Phase 5: Extended scry-learn fuzz targets
# ═══════════════════════════════════════════

[[bin]]
name = "fuzz_linear_fit"
path = "fuzz_targets/fuzz_linear_fit.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_svm_fit"
path = "fuzz_targets/fuzz_svm_fit.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_kmeans_fit"
path = "fuzz_targets/fuzz_kmeans_fit.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sparse_ops"
path = "fuzz_targets/fuzz_sparse_ops.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_naive_bayes"
path = "fuzz_targets/fuzz_naive_bayes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_text_vectorizer"
path = "fuzz_targets/fuzz_text_vectorizer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pca_transform"
path = "fuzz_targets/fuzz_pca_transform.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tree_shap"
path = "fuzz_targets/fuzz_tree_shap.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_iforest"
path = "fuzz_targets/fuzz_iforest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_mmap_parse"
path = "fuzz_targets/fuzz_mmap_parse.rs"
test = false
doc = false
bench = false

# ═══════════════════════════════════════════
# Phase 6: Remaining scry-learn module coverage
# ═══════════════════════════════════════════

[[bin]]
name = "fuzz_knn"
path = "fuzz_targets/fuzz_knn.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_random_forest"
path = "fuzz_targets/fuzz_random_forest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_gradient_boosting"
path = "fuzz_targets/fuzz_gradient_boosting.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_neural_regressor"
path = "fuzz_targets/fuzz_neural_regressor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_preprocess_extra"
path = "fuzz_targets/fuzz_preprocess_extra.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_feature_selection"
path = "fuzz_targets/fuzz_feature_selection.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pipeline"
path = "fuzz_targets/fuzz_pipeline.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_metrics"
path = "fuzz_targets/fuzz_metrics.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_agglomerative"
path = "fuzz_targets/fuzz_agglomerative.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_hist_gbt"
path = "fuzz_targets/fuzz_hist_gbt.rs"
test = false
doc = false
bench = false

# ═══════════════════════════════════════════
# Phase 7: scry-llm fuzz targets
# ═══════════════════════════════════════════

[dependencies.scry-llm]
path = "../crates/scry-llm"
default-features = false

[[bin]]
name = "fuzz_llm_forward"
path = "fuzz_targets/fuzz_llm_forward.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_llm_batched_forward"
path = "fuzz_targets/fuzz_llm_batched_forward.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_llm_data_loader"
path = "fuzz_targets/fuzz_llm_data_loader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_llm_training_step"
path = "fuzz_targets/fuzz_llm_training_step.rs"
test = false
doc = false
bench = false

# ═══════════════════════════════════════════
# Phase 8: Security hardening fuzz targets
# ═══════════════════════════════════════════

[[bin]]
name = "fuzz_ipc_deserialize"
path = "fuzz_targets/fuzz_ipc_deserialize.rs"
test = false
doc = false
bench = false

# ═══════════════════════════════════════════
# Phase 9: Terminal security fuzz targets
# ═══════════════════════════════════════════

[[bin]]
name = "fuzz_vte_terminal"
path = "fuzz_targets/fuzz_vte_terminal.rs"
test = false
doc = false
bench = false
