[package]
name = "scry-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tiny-skia = "0.11"
fastrand = "2"

[dependencies.scry-engine]
path = ".."
features = ["kitty"]

[dependencies.scry-chart]
path = "../crates/scry-chart"

[dependencies.scry-pipe]
path = "../crates/scry-pipe"

# Core engine fuzz targets

[[bin]]
name = "fuzz_kitty_escape"
path = "fuzz_targets/fuzz_kitty_escape.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_scene_hash"
path = "fuzz_targets/fuzz_scene_hash.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rasterize"
path = "fuzz_targets/fuzz_rasterize.rs"
test = false
doc = false
bench = false

# Chart fuzz targets

[[bin]]
name = "fuzz_scale"
path = "fuzz_targets/fuzz_scale.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_chart_render"
path = "fuzz_targets/fuzz_chart_render.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_chart_builder"
path = "fuzz_targets/fuzz_chart_builder.rs"
test = false
doc = false
bench = false

# Pipe fuzz targets

[[bin]]
name = "fuzz_ir_roundtrip"
path = "fuzz_targets/fuzz_ir_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pipeline_transform"
path = "fuzz_targets/fuzz_pipeline_transform.rs"
test = false
doc = false
bench = false

# IPC security fuzz target

[[bin]]
name = "fuzz_ipc_deserialize"
path = "fuzz_targets/fuzz_ipc_deserialize.rs"
test = false
doc = false
bench = false
