[package]
name = "pixelchart-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
authors = ["esoc"]
description = "CLI tool for generating pixel-perfect charts in the terminal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Slush97/ratatui-pixelcanvas"
keywords = ["chart", "cli", "kitty", "graphics", "terminal"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "pixelchart"
path = "src/main.rs"

[dependencies]
pixelchart = { path = "../pixelchart" }
ratatui-pixelcanvas = { path = "../..", features = ["kitty", "text"] }

clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
csv = "1"
flate2 = "1"
