[package]
name = "scry-chart"
version = "0.7.0"
edition = "2021"
rust-version = "1.83.0"
authors = ["esoc"]
description = "Pixel-perfect TUI charts built on scry-engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Slush97/scry"
keywords = ["ratatui", "tui", "charts", "visualization", "plotting"]
categories = ["command-line-interface", "graphics", "visualization"]
readme = "README.md"

[features]
default = []
serde = ["dep:serde", "scry-engine/serde"]

[dependencies]
scry-engine = { path = "../..", features = ["kitty", "widget"] }
ratatui = { version = "0.29", features = ["crossterm"] }
tiny-skia = "0.11"
fontdue = "0.9.3"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"

[dev-dependencies]
crossterm = "0.28"
insta = { version = "1", features = ["glob"] }
serde_json = "1"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "allow"
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Pedantic overrides
module_name_repetitions = "allow"
must_use_candidate = "warn"
return_self_not_must_use = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
redundant_closure_for_method_calls = "allow"
suboptimal_flops = "allow"
redundant_clone = "allow"
cast_lossless = "allow"
while_float = "allow"
needless_for_each = "allow"
used_underscore_binding = "allow"
too_many_lines = "allow"
manual_clamp = "allow"
indexing_slicing = "allow"
needless_range_loop = "allow"
many_single_char_names = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
float_cmp = "allow"
