[package]
name = "scry-cli"
version = "0.7.0"
edition = "2021"
rust-version = "1.83.0"
authors = ["esoc"]
description = "Unified CLI tool for pixel-perfect terminal graphics, charts, and animations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Slush97/scry"
documentation = "https://docs.rs/scry-cli"
keywords = ["chart", "cli", "kitty", "graphics", "terminal"]
categories = ["command-line-utilities", "visualization"]
readme = "README.md"

[[bin]]
name = "scry"
path = "src/main.rs"

[dependencies]
scry-chart = { version = "0.7.0", path = "../scry-chart", features = ["widget", "cli"] }
scry-engine = { version = "0.7.0", path = "../..", features = ["kitty", "sixel", "iterm2", "text", "sdf-gpu", "sdf-text", "native-ipc", "widget"] }

clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui   = { version = "0.29", features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
csv = "1"

