[package]
name = "scry-learn"
version = "0.7.0"
edition = "2021"
rust-version = "1.83.0"
authors = ["esoc"]
description = "Production-grade machine learning toolkit with built-in scry visualization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Slush97/scry"
keywords = ["machine-learning", "decision-tree", "random-forest", "visualization", "terminal"]
categories = ["science", "algorithms", "visualization"]
readme = "README.md"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
scry-chart = { path = "../scry-chart" }
rayon = "1"
csv = "1"
thiserror = "2"
fastrand = "2"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
insta = { version = "1", features = ["glob"] }
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }
smartcore = "0.4"
linfa = "0.8"
linfa-trees = "0.8"
linfa-linear = "0.8"
linfa-logistic = "0.8"
linfa-nn = "0.8"
linfa-clustering = "0.8"
linfa-ensemble = "0.8.1"
linfa-reduction = "0.8"
linfa-elasticnet = "0.8"
ndarray = "0.16"
ndarray-rand = "0.15"
rand = "0.8"
serde_json = "1"

[[bench]]
name = "ml_algorithms"
harness = false

[[bench]]
name = "competitor_bench"
harness = false

[[example]]
name = "bench_dashboard"

[[example]]
name = "parity_diagnostic"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "allow"
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Pedantic overrides
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
suboptimal_flops = "allow"
too_many_lines = "allow"
similar_names = "allow"
many_single_char_names = "allow"
needless_pass_by_value = "allow"
