[package]
name = "scry-llm"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
authors = ["esoc"]
description = "Llama inference engine in Rust with CUDA backend"
license = "MIT OR Apache-2.0"

[features]
default = ["cuda"]
cuda = ["dep:cudarc"]
bf16 = ["cuda", "cudarc/f16", "dep:half"]
safetensors = ["dep:safetensors"]
tokenizer = ["dep:serde_json"]

[dependencies]
cudarc = { version = "0.19", features = ["cublas", "nvrtc", "cuda-13010"], optional = true }
half = { version = "2", optional = true }
safetensors = { version = "0.4", optional = true }
arrayvec = "0.7"
thiserror = "2"
fastrand = "2"
rayon = "1"
serde_json = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "llm_ops"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
too_many_arguments = "allow"
needless_range_loop = "allow"
# f64→f32 casts are intentional: f64 accumulators for numeric precision, f32 storage
cast_possible_truncation = "allow"
# usize→f64 casts unavoidable in numeric code (e.g. `dim as f64`)
cast_precision_loss = "allow"
# standard linear algebra variable names: m, k, n, d, b, etc.
many_single_char_names = "allow"
# tensor library — every op returns a value, #[must_use] on all of them is noise
must_use_candidate = "allow"
# cuBLAS requires i32; dimension casts from usize are safe for matrix sizes ≪ i32::MAX
cast_possible_wrap = "allow"
# similar variable names (e.g. transa/transb) are standard in BLAS code
similar_names = "allow"
# CUDA/cuBLAS functions can panic on device errors — documenting every one is noise
missing_panics_doc = "allow"
