[package]
name = "scry-mcp"
version = "0.7.0"
edition = "2021"
rust-version = "1.83.0"
authors = ["esoc"]
description = "Model Context Protocol server that renders scry charts and images inline in the host terminal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Slush97/scry"
keywords = ["mcp", "kitty", "terminal", "chart", "claude"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "scry-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "allow"
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
