[package]
name = "scry-mermaid"
version = "0.7.0"
edition = "2021"
rust-version = "1.83.0"
authors = ["esoc"]
description = "Mermaid diagram rendering for terminals via scry-engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Slush97/scry"
documentation = "https://docs.rs/scry-mermaid"
keywords = ["mermaid", "diagram", "tui", "terminal", "flowchart"]
categories = ["command-line-interface", "graphics", "visualization"]

[features]
default = ["widget"]
widget = ["dep:ratatui", "dep:crossterm", "scry-engine/widget"]
serde = ["dep:serde", "scry-engine/serde"]

[dependencies]
scry-engine = { version = "0.7.0", path = "../..", features = ["kitty", "text"] }
tiny-skia = "0.11"
fontdue = "0.9.3"
thiserror = "2"
ratatui = { version = "0.29", features = ["crossterm"], optional = true }
crossterm = { version = "0.28", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
insta = { version = "1", features = ["glob"] }
png = "0.17"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "allow"
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
cast_lossless = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
float_cmp = "allow"
many_single_char_names = "allow"
