[package]
name = "scry-pipe"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
authors = ["esoc"]
description = "Cross-language feature engineering compiler. Define pipelines in Python, compile to zero-dependency Rust or WASM."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Slush97/scry"
keywords = ["machine-learning", "feature-engineering", "pipeline", "compiler", "wasm"]
categories = ["science", "compilers", "wasm"]
readme = "README.md"

[features]
default = ["codegen"]
codegen = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rayon = "1"

[dev-dependencies]
insta = { version = "1", features = ["glob"] }
pretty_assertions = "1"
tempfile = "3"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Pedantic overrides
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
suboptimal_flops = "allow"
