[package]
name = "scry-terminal"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
authors = ["esoc"]
description = "GPU-accelerated terminal emulator powered by scry-engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Slush97/scry"

[[bin]]
name = "scry-term"
path = "src/main.rs"

[dependencies]
# Core terminal
vte = "0.13"
portable-pty = "0.9"
bitflags = "2"
unicode-width = "0.2"
unicode-segmentation = "1"

# Text shaping + rendering
cosmic-text = "0.12"
glyphon = "0.8"

# Windowing + GPU (match scry-engine versions)
winit = "0.30"
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

# scry-engine integration
scry-engine = { path = "../..", features = ["gpu"] }

# Threading + I/O
crossbeam-channel = "0.5"

# Platform
libc = "0.2"

# Clipboard
arboard = "3"
data-encoding = "2"

# Config + platform
dirs = "5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

# Logging (optional, matches scry-engine)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

[features]
default = []
logging = ["dep:tracing", "dep:tracing-subscriber"]

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
